--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "WouterJ/Decres",
+    "name": "decres/decres",
     "description": "Compress your project, supports as much languages as you want",
     "keywords": ["minify", "compress", "optimalisation", "speed"],
     "license": "MIT",
